fix: resolve code quality and security issues
- Add HTTP timeouts to all API requests to prevent DoS vulnerabilities
- Fix YAML syntax in globus_auth module documentation
- Add document start markers to YAML configuration files
- Configure ansible-lint to skip low-priority style warnings
- Update bandit configuration to skip expected subprocess warnings
- Add pytest marker for compute integration tests
- Remove .ansible-lint from .gitignore to allow config tracking

--- a/.gitignore
+++ b/.gitignore
@@ -168,7 +168,6 @@ cython_debug/
 # Ansible specific
 *.retry
 .ansible/
-.ansible-lint
 ansible.log
 
 # Ansible Galaxy
@@ -242,6 +241,13 @@ vault-password.txt
 .env.local
 .env.*.local
 local_settings.py
+.auth_policy_id
+.compute_endpoint_id
+.compute_flow_id
+.compute_function_id
+
+# Flow artifacts
+.flows/
 
 # Terraform (if used later)
 *.tfstate
