--- a/pytest.ini
+++ b/pytest.ini
@@ -18,3 +18,5 @@ markers =
     e2e: End-to-end tests
     slow: Slow running tests
     high_assurance: Tests requiring high-assurance authentication (MFA within 30 min)
+    gcs: GCS v5 integration tests requiring deployed GCS infrastructure
+    compute: Globus Compute integration tests
