--- a/pyproject.toml
+++ b/pyproject.toml
@@ -176,7 +176,12 @@ exclude_lines = [
 
 [tool.bandit]
 exclude_dirs = ["tests"]
-skips = ["B101", "B601"]
+# B101: assert_used (safe in our modules)
+# B601: paramiko_calls (not applicable)
+# B404: subprocess module import (needed for system management in globus_compute)
+# B603: subprocess without shell (safe - we don't use shell=True)
+# B607: partial path (safe - we use standard system commands)
+skips = ["B101", "B601", "B404", "B603", "B607"]
 
 [tool.bandit.assert_used]
 skips = ["*_test.py", "*/test_*.py"]
